--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -501,3 +501,86 @@ input[type=checkbox] {
 *:focus {
     outline: none;
 }
+
+
+/*------------------------------------------*/
+/*FOOTER*/
+/*------------------------------------------*/
+footer {
+    background-color: #333;
+    padding: 50px;
+    font-size: 80%;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.socail-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.socail-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.socail-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.socail-links li a:link,
+.socail-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    -webkit-transition: color 0.2s;
+    -o-transition: color 0.2s;
+    transition: color 0.2s;
+}
+
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 170%;
+}
+
+.social-icon {
+    -webkit-transition: color 0.2s;
+    -o-transition: color 0.2s;
+    transition: color 0.2s;
+}
+
+.socail-links li a:hover .social-icon[name=logo-facebook] {
+    color: #3b5999;
+}
+
+.socail-links li a:hover .social-icon[name=logo-twitter] {
+    color: #55acee;
+}
+
+.socail-links li a:hover .social-icon[name=logo-google] {
+    color: #dd4b39;
+}
+
+.socail-links li a:hover .social-icon[name=logo-instagram] {
+    color: #e4405f;
+}
+
+
+footer p {
+    color: #888;
+    text-align: center;
+    margin-top: 30px;
+}
