--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -41,6 +41,37 @@
     .btn-app img {
         margin-right: 5px;
     }
+
+    .app-screen {
+        width: 50%;
+    }
+
+    .icon-small {
+        width: 17px;
+        margin-right: 5px;
+    }
+
+    .city-feature {
+        font-size: 90%;
+    }
+
+    .plan-box {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .plan-price {
+        font-size: 200%;
+    }
+
+    .plan-box ul li {
+        font-size: 80%;
+    }
+
+    .contact-form {
+        width: 80%;
+    }
+
 }
 
 
@@ -48,9 +79,85 @@
 /* Small phones to small tablets: form 481 to 767px */
 @media only screen and (max-width: 767px) {}
 
+body {
+    font-size: 16px;
+}
 
+section {
+    padding: 30px 0;
+}
+
+.row,
+.hero-text-box {
+    padding: 0 4%;
+}
+
+.col {
+    width: 100%;
+    margin: 0 0 4% 0;
+}
+
+.main-nav {
+    display: none;
+}
+
+h1 {
+    font-size: 180%;
+}
+
+h2 {
+    font-size: 150%;
+}
+
+.long-copy {
+    width: 100%;
+    margin-left: 0%;
+}
+
+.app-screen {
+    width: 40%;
+}
+
+.steps-box:first-child {
+    text-align: center;
+}
+
+.works-step {
+    margin-bottom: 20px;
+}
+
+.works-step:last-of-type {
+    margin-bottom: 20px;
+}
+
+.works-step div {
+    height: 40px;
+    width: 40px;
+    padding: 4px;
+    font-size: 120%;
+    margin-right: 15px;
+}
 
 
 
 /* Small phones : form 0 to 480px */
-@media only screen and (max-width: 480px) {}
+@media only screen and (max-width: 480px) {
+
+    section {
+        padding: 25px 0;
+    }
+
+    .contact-form {
+        width: 100%;
+    }
+
+    .footer-nav {
+        float: none;
+        text-align: center;
+    }
+
+    .socail-links {
+        text-align: center;
+        float: none;
+    }
+}
